fix margin spacing for main container (#10)

--- a/common/common.scss
+++ b/common/common.scss
@@ -232,7 +232,7 @@ div.ac-wrap {
 }
 
 #main-outlet {
-  padding: 0 0;
+  padding: 0 60px;
   margin-bottom: 6em;
   margin-top: 2em;
   max-width: unset !important;
